Version 2.0.10
- Add timestamp to WindowHierarchy
